# CATLAS

./: README.md  TODO  environment.yml  pyproject.toml
backend/: README.md  backend.py
frontend/: README.md  frontend.py  servo_controller.py
frontend/templates/: cat_detection_viewer.html  cat_tracking.html  catlas.html  remote_control.html
shared/: README.md  cat_detector.py  servo_config.py
testing/: cat_laser.py  cat_tracker.py  laser_test.py  main.py  test_both_servos.py  test_tracking.py  track_cat.py
ui_testing/: app.py
ui_testing/templates/: tracking.html
