[project]
name = "laser-turret"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "picamera2",
    "opencv-python",
    "numpy",
]

[tool.pylint.MAIN]
init-hook = "import sys; sys.path.append('./.venv/lib/python3.12/site-packages')"
disable = [
    "missing-docstring",
    "broad-exception-caught",
]
load-plugins = [
    "pylint.extensions.mccabe",
]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120